overflow fix

--- a/css/body.css
+++ b/css/body.css
@@ -162,6 +162,7 @@
 }
 .fl-container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 100px;
     align-items: center;
